--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&family=Oswald:wght@400&display=swap');
+
 :root {
   --brand-blue: #03b9e3;
+  --brand-purple: #5f03e3;
+  /* --brand-yellow: #ffdc00;
+  --brand-orange: #ff8600; */
   --brand-black: #000;
   --brand-white: #fff;
 
   --background-color: var(--brand-black);
   --text-color: var(--brand-white);
-  --link-color: var(--brand-blue);
-/* $link-color-hover: darken($brand-blue, 15%); */
+  --link-color: var(--brand-white);
+  --link-color-hover: var(--brand-blue);
 
   --selection-color: var(--brand-black);
   --selection-bg-color: var(--brand-blue);
@@ -60,8 +65,8 @@ script + * {
 /* Typography */
 
 html {
-  font-family: sans-serif;
-  font-weight: 300;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
   font-size: 1em;
   line-height: 1.3em;
   color: var(--text-color);
@@ -97,16 +102,30 @@ h4 {
   line-height: 1.4em;
 }
 
-h2, h3, h4 {
-  font-weight: 600;
+h1, h2, h3, h4 {
+  color: var(--brand-yellow);
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+@supports (-webkit-background-clip: text) {
+  h1, h2, h3, h4 {
+    background-image: linear-gradient(180deg, var(--brand-blue) 60%, var(--brand-purple) 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+  }
 }
 
 a {
   transition: .3s;
   color: var(--link-color);
-  /* &:hover {
-    color: $link-color-hover;
-  } */
+}
+
+a:hover,
+a:focus {
+  color: var(--link-color-hover);
 }
 
 /* Elements */
@@ -157,7 +176,7 @@ dd {
 }
 
 /* masthead */
-.masthead {
+/* .masthead {
   position: relative;
   padding-top: 75%;
   border: red solid 1px;
@@ -171,4 +190,20 @@ dd {
   .masthead {
     padding-top: 25%;
   }
+} */
+
+/* Custom styles */
+.link-list {
+  display: flex;
+  gap: 0.75em;
+}
+
+.link-list li {
+  margin-top: 0;
+}
+
+.icon {
+  width: 1.5em;
+  height: 1.5em;
+  margin-top: 0;
 }
